# be-an-fde-for-a-day-navalmon-public

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: settings.json
docs/: architecture.md  evals.md  implementation-plan.md  methodology.md
docs/submission/: README.md
infra/: README.md
infra/app/: __main__.py  pyproject.toml
py/: pyproject.toml
py/apps/sample/: app_state.py  config.py  main.py  model_client.py  models.py  pyproject.toml  resilience.py
py/apps/sample/extraction/: __init__.py  image_tools.py  schema_tools.py  service.py
py/apps/sample/orchestration/: __init__.py  service.py
py/apps/sample/tests/: test_app_foundation.py  test_model_client.py  test_task1_public_eval.py  test_task_services.py
py/apps/sample/triage/: __init__.py  prompts.py  service.py
